--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 ---
 layout: default
-title: ACM ICEA 2020
+title: ACM ICEA 2023
 ---
 
 <div class="container">
       <div class="content">
             <center>
                   <h2>
-                        High1 Resort (Spade Room - 6F, High1 Grand Hotel),</br>
-                        Gangwon, Republic of Korea</br>
-                        December 12-15, 2020
+                        National Kaohsiung University of Science and Technology </br>
+                        Kaohsiung City, Taiwan</br>
+                        December 14-16, 2023
                   </h2>
       
             <img src="https://icea-conf.github.io/2020/image/ICEA2020_Background.jpg" alt="" style="max-width: 100%; height: auto;">
