--- a/committee/index.html
+++ b/committee/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: ACM ICEA 2020
+title: ACM ICEA 2023
 ---
 <div class="container">
 	<div class="content">
@@ -8,76 +8,88 @@ title: ACM ICEA 2020
 			<h2 style="color:#0000FF">Organizing Committee</h2>
 				<h3>Honorable Chairs</h3>
 				<ul>
-					<li><b>Pankoo Kim</b>, Chosun Univeristy, Republic of Korea</li>
-					<li><b>Chu-Sing Yang</b>, National Cheng Kung University, Taiwan</li>
+					<li><b>Chung-Nan Lee</b>, National Sun Yat-Sen Univeristy, Taiwan</li>
+					<li><b>Ching-Yu Yang</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 
-				<h3>General Chairs</h3>
+				<h3>Steering Chairs</h3>
 				<ul>
-					<li><b>Jong-Hyouk Lee</b>, Sejong University, Republic of Korea</li>
 					<li><b>Chun-Wei Tsai</b>, National Sun Yat-sen University, Taiwan</li>
+					<li><b>Jong-Hyouk Lee</b>, Sejong University, Republic of Korea</li>
 				</ul>
 
-				<h3>Program Chairs</h3>
+				<h3>General Chair</h3>
 				<ul>
-					<li><b>Christian Esposito</b>, University of Salerno, Italy</li>    
-					<li><b>Fan-Hsun Tseng</b>, National Taiwan Normal University, Taiwan</li>
+					<li><b>Jimmy Ming-Tai Wu</b>, Shandong University of Science and Technology, China</li>
+				</ul>
+
+				<h3>General Co-Chair</h3>
+				<ul>
+					<li><b>Ching-Chang Lee</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 			
-				<h3>Publication Chairs</h3>
+				<h3>Program Chairs</h3>
 				<ul>
-					<li><b>Hoon Ko</b>, Chosun University, Republic of Korea</li>
-					<li><b>Mu-Yen Chen</b>, National Taichung University of Science and Technology, Taiwan</li>
-					<li><b>Xin Su</b>, Hohai University, China</li>
+					<li><b>Chun-Hao Chen</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
+					<li><b>Dongjie Liu</b>, Jinan University, China</li>
 				</ul>
 
-				<h3>Workshop Chairs</h3>
+				<h3>Local Arrangement Chairs</h3>
 				<ul>
-					<li><b>Kyungroul Lee</b>, Soonchunhyang University, Republic of Korea</li>
-					<li><b>Chi-Yuan Chen</b>, National Ilan University, Taiwan</li>
+					<li><b>Kawuu W. Lin</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
+					<li><b>Mu-En Wu</b>, National Taipei University of Technology, Taiwan</li>
+				</ul>
+
+				<h3>Publicity Chairs</h3>
+				<ul>
+					<li><b>Matin Pirouz Nia</b>, California State University Fresno, USA</li>
+					<li><b>Shahab Tayeb</b>, California State University Fresno, USA</li>
 				</ul>
 
 				<h3>Financial Chair</h3>
 				<ul>
-					<li><b>Chang Choi</b>, Gachon University, Republic of Korea</li>
+					<li><b>Ko-Wei Huang</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 
-				<h3>Website Chairs</h3>
+				<h3>Web Chair</h3>
 				<ul>
-					<li><b>Changjun Choi</b>, Sejong University, Republic of Korea</li>
-					<li><b>Hsin-Te Wu</b>, National Ilan University, Taiwan</li>
+					<li><b>Shih-Pang Tseng</b>, Changzhou College of Information Technology, China</li>
 				</ul>
 
-				<h3>Poster Chairs</h3>
+				<h3>Tutorial Chair</h3>
 				<ul>
-					<li><b>Kangbin Yim</b>, Soonchunhyang University, Republic of Korea</li>
-					<li><b>Sangwoong Lee</b>, Gachon University, Republic of Korea</li>
-					<li><b>Hsin-Hung Cho</b>, National Ilan University, Taiwan</li>
+					<li><b>Lee Shih-Hsiung</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 		</div>
 		
 		<div style="padding-top: 10px">
 			<h2 style="color:#0000FF">Technical Program Committee (Tentative)</h2>
 			<ul>
-				<li><b>Francesco Palmieri</b>, University of Salerno, Italy</li>
-				<li><b>Kiho Lim</b>, William Paterson University, USA</li>
-				<li><b>Lidia Ogiela</b>, Pedagogical University of Cracow, Poland</li>
-				<li><b>Marek Ogiela</b>, AGH University of Science and Technology, Poland</li>
-				<li><b>Wenbo Shi</b>, Northeastern University at Qinhuangdao, China</li>
-				<li><b>Xin Su</b>, Hohai University, China</li>
-				<li><b>YuPeng Wang</b>, Shenyang Aerospace University, China</li>
-				<li><b>Tian Wang</b>, Beihang University, China</li>
-				<li><b>Kamal Deep Singh</b>, Telecom Saint Etienne, France</li>
-				<li><b>Zhiwei Yan</b>, China Internet Network Information Center, China</li>
+				<li><b>Ameer Hamza Khan</b>, Hong Kong Polytechnic University, Hong Kong</li>
 				<li><b>Ashok Kumar Das</b>, International Institute of Information Technology, India</li>
-				<li><b>Sungbum Lee</b>, KT co. ltd., Republic of Korea</li>
-				<li><b>Byung-Chul Choi</b>, ETRI, Republic of Korea</li>
-				<li><b>Jung-Soo Park</b>, ETRI, Republic of Korea</li>
-				<li><b>Sangheon Pack</b>, Korea University, Republic of Korea</li>
-				<li><b>Manabu Tsukada</b>, The University of Tokyo, Japan</li>
-				<li><b>Manhee Lee</b>, Hannam University, Republic of Korea</li>
-				<li><b>Hyunhee Park</b>, Myungji University, Republic of Korea</li>
-				<li><b>Ki-Woong Park</b>, Sejong University, Republic of Korea</li>
+				<li><b>Chunxiao Jiang</b>,Tsinghua University, China</li>
+				<li><b>Cindy Zhang</b>, Carnegie Mellon University, USA</li>
+				<li><b>Francesco Palmieri</b>, University of Salerno, Italy</li>
+				<li><b>Guang-Gang Geng</b>, Jinan University, China</li>
+				<li><b>Hoon Ko</b>, Chosun University, Republic of Korea</li>
+				<li><b>Jianfeng Guan</b>, Beijing University of Post and Telecommunication, China</li>
+				<li><b>Leau Yu Beng</b>, University of Malaysia Sabah, Malaysia</li>
+				<li><b>Marek Ogiela</b>, AGH University of Science and Technology, Poland</li>
+				<li><b>Ming Li</b>, Singapore Management University, Singapore</li>
+				<li><b>Nikolaj Goranin</b>, Vilnius Gediminas Technical University, Lithuania</li>
+				<li><b>Patrick Hung</b>, Ontario Tech University, Canada</li>
+				<li><b>Qingyang Wang</b>, Louisiana State University, USA</li>
+				<li><b>Soma Prathibha</b>, Sri Sairam Engineering College, India</li>
+				<li><b>Su Yao</b>, Tsinghua University, China</li>
+				<li><b>Syed Hassan Shah</b>, JMA Wireless, USA</li>
+				<li><b>XiaoBo Jin</b>, Xi’an Jiaotong-liverpool University, China</li>
+				<li><b>Yanming Zhang</b>, Institute of Automation, Chinese Academy of Sciences, China</li>
+				<li><b>Yongmao Ren</b>, Computer Network Information Center, Chinese Academy of Sciences, China</li>
+				<li><b>Ying Liu</b>, Beijing Jiaotong University, China</li>
+				<li><b>Sherali Zeadally</b>, University of Kentucky, USA</li>
+				<li><b>Vinay Palaparthy</b>, Dhirubhai Ambani Institute of Information and Communication Technology, India</li>
+				<li><b>Xin-Chang Zhang</b>, Quancheng Provincial Laboratory, China</li>
+				<li><b>Zhi-Wei Yan</b>, China Internet Network Information Center, China</li>
 			</ul>
 		</div>
 	</div>
