--- a/committee/index.html
+++ b/committee/index.html
@@ -5,7 +5,7 @@ title: ACM ICEA 2023
 <div class="container">
 	<div class="content">
 		<div>
-			<h2 style="color:#0000FF">Organizing Committee</h2>
+			<h2 style="color:#0000FF">Organizing Committee (Tentative)</h2>
 				<h3>Honorable Chairs</h3>
 				<ul>
 					<li><b>Chung-Nan Lee</b>, National Sun Yat-Sen Univeristy, Taiwan</li>
