--- a/index.html
+++ b/index.html
@@ -20,18 +20,18 @@ title: ACM ICEA 2023
                         <tbody>
                               <tr>
                                     <td>
-                                          <li>Paper Submission: </li>
+                                          <li>Full Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b style="color:#FF0000">&nbsp; &nbsp; October 11, 2020 (Final Extension)</b>
+                                          <b>&nbsp; &nbsp; November 1, 2023</b>
                                     </td>
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Acceptance Notification: </li>
+                                          <li>Acceptance Notification Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 1, 2020</b>
+                                          <b>&nbsp; &nbsp; November 1, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -39,15 +39,15 @@ title: ACM ICEA 2023
                                           <li>Early (Author) Registration Due: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>November 16, 2020</del></b><b style="color:#FF0000">&nbsp; November 23, 2020</b>
+                                          <b>&nbsp; &nbsp; November 1, 2023</b>
                                     </td>
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Late Registration Due: </li>
+                                          <li>Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; <del>November 30, 2020</del></b><b style="color:#FF0000">&nbsp; December 7, 2020</b>
+                                          <b>&nbsp; &nbsp; December 1, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -55,30 +55,11 @@ title: ACM ICEA 2023
                                           <li>Conference Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; December 12-15, 2020</b>
+                                          <b>&nbsp; &nbsp; December 14-16, 2023</b>
                                     </td>
                               </tr>
                         </tbody>
                   </table>
             </div></br>
-            
-            <div>
-                  <h3>High1 Accommodation Form</h3>
-                  <table>
-                        <tbody>
-                              <tr>
-                                    <td><li><a style="text-align: justify">Download the attached form and send it by email (<a style="text-decoration:none" href="mailto:saint@high1.com">saint at high1.com</a>) until <b style="color: #FF0000">December 10</b></a></li></td>
-                              </tr>
-                              <tr>
-                                    <td><li><a style="text-align: justify"><b><a href="https://icea-conf.github.io/2023/registration/high1-reservation-form.hwp">Accommodation Form Download</a></b></a></li>
-                              </tr>
-                        </tbody>
-                  </table>
-            </div></br>
-            </center>
-
-            <div>
-                  <p style="text-align: justify">Due to the COVID-19 situation, ACM ICEA 2023 will be an on-off mix conference. For those who cannot attend the conference in-person due to travel restrictions, video/remote presentations will be arranged. An author who wants to do the video/remote presentation should contact us via email (<a style="text-decoration:none" href="mailto:kism1122@kism.or.kr">kism1122 at kism.or.kr</a>) until <b style="color:#FF0000">December 7, 2020</b>.</p>
-            </div>
       </div>
 </div>
