--- a/index.html
+++ b/index.html
@@ -61,5 +61,8 @@ title: ACM ICEA 2023
                         </tbody>
                   </table>
             </div></br>
+            
+            </center>
+            
       </div>
 </div>
