--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@ title: ACM ICEA 2023
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Early (Author) Registration Due: </li>
+                                          <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
                                           <b>&nbsp; &nbsp; November 1, 2023</b>
