--- a/best_papers/index.html
+++ b/best_papers/index.html
@@ -5,6 +5,7 @@ title: ACM ICEA 2023
 <div class="container">
      <div class="content">
           <div>
+               <h2 style="color:#0000FF">Best Papers</h2>
                To be announced.
           </div>
      </div>
