--- a/best_papers/index.html
+++ b/best_papers/index.html
@@ -6,7 +6,7 @@ title: ACM ICEA 2023
      <div class="content">
           <div>
                <h2 style="color:#0000FF">Best Papers</h2>
-               To be announced.
+                    <p style="text-align: justify">To be announced. </p>
           </div>
      </div>
 </div>
