--- a/papers/index.html
+++ b/papers/index.html
@@ -1,36 +1,87 @@
 ---
 layout: default
-title: ACM ICEA 2020
+title: ACM ICEA 2023
 ---
 <div class="container">
       <div class="content">
             <div>
-                  <h2 style="color:#0000FF">Aim & Scope</h2>
-                        <p style="text-align: justify">Developing an effective and efficient artificial intelligent method for enhancing the performance of an intelligent system has been a critical issue today, because several studies on deep learning and intelligent system have shown the possibilities of artificial intelligence technologies in recent years. Besides developing more useful supervised/unsupervised learning algorithms to enhance the performance of an intelligent system, how to adopt cloud computing and GPU technologies to accelerate the performance of such systems has attracted the attention of researchers from different disciplines. One emerging application is to apply these technologies to an internet of things system to make it “smart” or even “intelligent.” These emerging intelligent applications can also be found in data mining, network security, smart city, and many applications in our daily life. The ACM ICEA 2020 provides an open platform for researchers from different countries to exchange their research results, experiences, and opinions in the topics on intelligent computing and other relevant emerging applications.  This conference features all recent advances in an integral concept that highlights the trends in search algorithms, systems, and applications in intelligent computing.</p>
+                  <h2 style="color:#0000FF">Introduction</h2>
+                        <p style="text-align: justify">To be announced.</p>
             </div>
 
-            <div style="padding-top: 10px">
-                  <h2 style="color:#0000FF">Paper Publication</h2>
-                        <p style="text-align: justify">All papers will be fully refereed and undergo a blind review process by at least three referees. All accepted papers will be published as an ACM proceeding and will be included in the ACM Digital Library. Extended versions of selected papers will be published in several International Journals (SCIE) as a special section for the ACM ICEA 2020.</p>
-
-                  <h3>Special Issues of Journals (SCIE)</h3>
-                        <b>1) Sensors, ISSN: 1424-8220, 2018 JCR IF: 3.031</b>
-                              <ul>
-                                    <li><a>Special Issue Topic: Computational Intelligence and Intelligent Contents (CIIC)</a></li>
-                                    <li><a style="text-align: justify" target="_blank" href='https://www.mdpi.com/journal/sensors/special_issues/Computational_Intelligence_CIIC'>https://www.mdpi.com/journal/sensors/special_issues/Computational_Intelligence_CIIC</a></li><br>
-                              </ul>
-
-                        <b>2) Sensors, ISSN: 1424-8220, 2018 JCR IF: 3.031</b>
-                              <ul>
-                                    <li><a>Special Issue Topic: Recent Trends in Embedded Technologies and Wearable Systems: Artificial Intelligence Solutions</a></li>
-                                    <li><a style="text-align: justify" target="_blank" href='https://www.mdpi.com/journal/sensors/special_issues/wearable_AI'>https://www.mdpi.com/journal/sensors/special_issues/wearable_AI</a></li><br>
-                              </ul>
-                              
-                        <b>3) Current Medical Imaging Review, ISSN: 1573-4056, 2018 JCR IF: 0.533</b>
-                              <ul>
-                                    <li><a>Special Issue Topic: Bio-Signal: Algorithms and Applications (Pending)</a></li>
-                                    <li><a style="text-align: justify" target="_blank" href="https://benthamscience.com/journal-files/special-issue-details/CMIM-SII20191217-01.pdf">https://benthamscience.com/journal-files/special-issue-details/CMIM-SII20191217-01.pdf</a></li><br>
-                              </ul>
+            <div style="padding-top: 10px">      
+                  <h2 style="color:#0000FF">Topics</h2>
+                        <p style="text-align: justify">This conference will be focusing on intelligent computing technologies and applications such as smart network, smart home, smart city, industry network, online social network, internet of things, network security, big data and so forth. Topics of interest include (but are not limited to): </p>
+                              <table>
+                                    <tbody>
+                                          <tr>
+                                                <ul>
+                                                <td>
+                                                      <li><a>Machine Learning &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Mobile Computing &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Big Data</a></li>
+                                                </td>
+                                                </ul>
+                                          </tr>
+                                          <tr>
+                                                <ul>
+                                                <td>
+                                                      <li><a>Deep Learning &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Intelligent Networks &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Security and Privacy</a></li>
+                                                </td>
+                                                </ul>
+                                          </tr>
+                                          <tr>
+                                                <ul>
+                                                <td>
+                                                      <li><a>Metaheuristic Algorithms &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Industrial Internet &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Smart Home and Smart City</a></li>
+                                                </td>
+                                                </ul>
+                                          </tr>
+                                          <tr>
+                                                <ul>
+                                                <td>
+                                                      <li><a>Data Mining &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Cloud/Edge Computing &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Expert Systems</a></li>
+                                                </td>
+                                                </ul>
+                                          </tr>
+                                          <tr>
+                                                <ul>
+                                                <td>
+                                                      <li><a>Intelligent System &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Intelligent of Things &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>Information Retrieval</a></li>
+                                                </td>
+                                                </ul>
+                                          </tr>
+                                    </tbody>
+                              </table>
+                  </ul>
             </div>
 
             <div style="padding-top: 10px">
