--- a/program/index.html
+++ b/program/index.html
@@ -6,7 +6,7 @@ title: ACM ICEA 2020
      <div class="content">
           <div>
                <h2 style="color:#0000FF">Program Information</h2>
-               
+                    <p style="text-align: justify">To be announced.</p>
           </div></br>
      </div>
 </div>
