--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ title: ACM ICEA 2023
                                           <li>Full Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 1, 2023</b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
@@ -31,7 +31,7 @@ title: ACM ICEA 2023
                                           <li>Acceptance Notification Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 1, 2023</b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
@@ -39,7 +39,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 1, 2023</b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
@@ -47,7 +47,7 @@ title: ACM ICEA 2023
                                           <li>Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; December 1, 2023</b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
