--- a/papers/index.html
+++ b/papers/index.html
@@ -94,7 +94,7 @@ title: ACM ICEA 2023
                                           <li>Full Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; Novenber 1, 2023 </b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
@@ -102,7 +102,7 @@ title: ACM ICEA 2023
                                           <li>Acceptance Notification Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 1, 2023</b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
@@ -110,7 +110,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; Novenber 1, 2023 </b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
@@ -118,7 +118,7 @@ title: ACM ICEA 2023
                                           <li>Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; Novenber 1, 2023 </b>
+                                          <b>&nbsp; &nbsp; To be announced.</b>
                                     </td>
                               </tr>
                               <tr>
