--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@ title: ACM ICEA 2023
                   <h2>
                         National Kaohsiung University of Science and Technology </br>
                         Kaohsiung City, Taiwan</br>
-                        December 14-16, 2023
+                        December 14-15, 2023
                   </h2>
       
             <img src="https://icea-conf.github.io/2023/image/ICEA2023-Background.jpg" alt="" style="max-width: 100%; height: auto;">
@@ -23,15 +23,15 @@ title: ACM ICEA 2023
                                           <li>Full Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 27, 2023.</b>
                                     </td>
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Acceptance Notification Date: </li>
+                                          <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 20, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -39,7 +39,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 27, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -47,15 +47,15 @@ title: ACM ICEA 2023
                                           <li>Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 30, 2023</b>
                                     </td>
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Conference Date: </li>
+                                          <li>Conference: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; December 14-16, 2023</b>
+                                          <b>&nbsp; &nbsp; December 14-15, 2023</b>
                                     </td>
                               </tr>
                         </tbody>
