--- a/papers/index.html
+++ b/papers/index.html
@@ -6,12 +6,12 @@ title: ACM ICEA 2023
       <div class="content">
             <div>
                   <h2 style="color:#0000FF">Introduction</h2>
-                        <p style="text-align: justify">To be announced.</p>
+                        <p style="text-align: justify">In recent years, numerous studies on deep learning and intelligent systems have demonstrated the potential of artificial intelligence technologies, making the development of an effective and efficient artificial intelligence method for improving the performance of an intelligent system a pressing issue. In addition to developing more relevant supervised/unsupervised learning algorithms to improve the performance of an intelligent system, researchers from a variety of disciplines are interested in using cloud computing and GPU technologies to increase the performance of such systems. The application of these technologies to an internet of things system to make it "smart" or even "intelligent" is an emerging application. These growing intelligent applications can also be found in data mining, networking, network security, smart cities, AR/VR, and a variety of other everyday applications. The ACM ICEA 2023 provides a forum for international scholars to share their research findings, experiences, and perspectives on intelligent computing and other related developing applications. This conference emphasizes all the latest advancements in a holistic paradigm that highlights the developments in intelligent computing search algorithms, systems, and applications.</p>
             </div>
 
             <div style="padding-top: 10px">      
                   <h2 style="color:#0000FF">Topics</h2>
-                        <p style="text-align: justify">This conference will be focusing on intelligent computing technologies and applications such as smart network, smart home, smart city, industry network, online social network, internet of things, network security, big data and so forth. Topics of interest include (but are not limited to): </p>
+                        <p style="text-align: justify">This conference will concentrate on intelligent computing technologies and applications, including smart network, smart home, smart city, industry network, online social network, internet of things, network security, and big data, AR/VR among others. Among the topics of interest are (but not limited to): </p>
                               <table>
                                     <tbody>
                                           <tr>
@@ -79,6 +79,16 @@ title: ACM ICEA 2023
                                                 </td>
                                                 </ul>
                                           </tr>
+                                          <tr>
+                                                <ul>
+                                                <td>
+                                                      <li><a>Augmented Reality &nbsp;&nbsp;</a></li>
+                                                </td>
+                                                <td>
+                                                      <li><a>virtual reality</a></li>
+                                                </td>
+                                                </ul>
+                                          </tr>
                                     </tbody>
                               </table>
                   </ul>
@@ -94,15 +104,15 @@ title: ACM ICEA 2023
                                           <li>Full Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 15, 2023</b>
                                     </td>
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Acceptance Notification Date: </li>
+                                          <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 20, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -110,7 +120,7 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 27, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -118,15 +128,15 @@ title: ACM ICEA 2023
                                           <li>Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; To be announced.</b>
+                                          <b>&nbsp; &nbsp; November 30, 2023</b>
                                     </td>
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Conference Date: </li>
+                                          <li>Conference: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; December 14-16, 2023</b>
+                                          <b>&nbsp; &nbsp; December 14-15, 2023</b>
                                     </td>
                               </tr>
                         </tbody>
