--- a/papers/index.html
+++ b/papers/index.html
@@ -85,7 +85,7 @@ title: ACM ICEA 2023
                                                       <li><a>Augmented Reality &nbsp;&nbsp;</a></li>
                                                 </td>
                                                 <td>
-                                                      <li><a>virtual reality</a></li>
+                                                      <li><a>Virtual Reality</a></li>
                                                 </td>
                                                 </ul>
                                           </tr>
