--- a/papers/index.html
+++ b/papers/index.html
@@ -101,10 +101,10 @@ title: ACM ICEA 2023
                         <tbody>
                               <tr>
                                     <td>
-                                          <li>Full Paper Submission Date: </li>
+                                          <li>Submission Due Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 15, 2023</b>
+                                          <b>&nbsp; &nbsp; August 18, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -112,7 +112,7 @@ title: ACM ICEA 2023
                                           <li>Notification of Acceptance Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 20, 2023</b>
+                                          <b>&nbsp; &nbsp; October 6, 2023</b>
                                     </td>
                               </tr>
                               <tr>
@@ -120,15 +120,23 @@ title: ACM ICEA 2023
                                           <li>Final Paper Submission Date: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 27, 2023</b>
+                                          <b>&nbsp; &nbsp; October 13, 2023</b>
                                     </td>
                               </tr>
                               <tr>
                                     <td>
-                                          <li>Registration Deadline: </li>
+                                          <li>Early Registration Deadline: </li>
                                     </td>
                                     <td>
-                                          <b>&nbsp; &nbsp; November 30, 2023</b>
+                                          <b>&nbsp; &nbsp; October 20, 2023</b>
+                                    </td>
+                              </tr>
+                              <tr>
+                                    <td>
+                                          <li>Late Registration Due: </li>
+                                    </td>
+                                    <td>
+                                          <b>&nbsp; &nbsp; November 10, 2023</b>
                                     </td>
                               </tr>
                               <tr>
