--- a/submission/index.html
+++ b/submission/index.html
@@ -16,7 +16,7 @@ title: ICEA 2023
                     <p style="text-align: justify">All paper submissions will be handled electronically. The submission process is described on the below link.</p>
                     <h3>Easychair Paper Submission Link</h3>
                     <ul>
-                         <li><a target="_blank" href="https://easychair.org/my/conference?conf=icea2020#">https://easychair.org/my/conference?conf=icea2020#</a></li>
+                         <li><a target="_blank" href="https://easychair.org/my/conference?conf=icea2023">https://easychair.org/my/conference?conf=icea2023</a></li>
                     </ul>
           </div>
 
