--- a/committee/index.html
+++ b/committee/index.html
@@ -8,8 +8,9 @@ title: ICEA 2023
 			<h2 style="color:#0000FF">Organizing Committee (Tentative)</h2>
 				<h3>Honorable Chairs</h3>
 				<ul>
-					<li><b>Chung-Nan Lee</b>, National Sun Yat-Sen Univeristy, Taiwan</li>
 					<li><b>Ching-Yu Yang</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
+					<li><b>Jiann-Liang Chen</b>, National Taiwan University of Science and Technology, Taiwan</li>
+					<li><b>Chung-Nan Lee</b>, National Sun Yat-Sen Univeristy, Taiwan</li>					
 				</ul>
 
 				<h3>Steering Chairs</h3>
@@ -26,6 +27,7 @@ title: ICEA 2023
 				<h3>General Co-Chair</h3>
 				<ul>
 					<li><b>Ching-Chang Lee</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
+					<li><b>Yao-Chung Chang</b>, National Taitung University, Taiwan</li>
 				</ul>
 			
 				<h3>Program Chairs</h3>
