--- a/registration/index.html
+++ b/registration/index.html
@@ -96,7 +96,7 @@ title: ICEA 2023
                               </td>
                               
                               <td class="tcontent1">
-                                   <a>$600<br>(670,000 KRW)</a> 
+                                   <a>$600<br><!--(670,000 KRW)--!></a> 
                               </td>
                               <td class="tcontent3" rowspan="2">
                                    <a>Free gifts, Reception Coupon, Banquet Coupon</a>
