--- a/papers/index.html
+++ b/papers/index.html
@@ -159,7 +159,8 @@ title: ICEA 2023
             
             <div style="padding-top: 10px">
                   <h2 style="color:#0000FF">Paper Publication</h2>
-                        <p style="text-align: justify">All papers will be fully refereed and undergo a blind review process by at least three referees. All accepted papers will be published as a proceeding and will be submitted for EI Compendex. Extended versions of selected papers will be published in several International Journals, including ICT Express (SCI), China Communications  (SCI), Chinese Journal of Electronics (SCI), Journal of Communications (in Chinese) (EI), Journal of Communications and Information Networks (Scopus), Chinese Journal of Network and Information Security (in Chinese) (Scopus).</p>
+                        <p style="text-align: justify">All papers will be fully refereed and undergo a blind review process by at least three referees.
+                              Accepted papers will be published in the International Conference Proceedings Series by ACM.</p>
             </div>
       
       </div>
