--- a/committee/index.html
+++ b/committee/index.html
@@ -5,7 +5,7 @@ title: ICEA 2023
 <div class="container">
 	<div class="content">
 		<div>
-			<h2 style="color:#0000FF">Organizing Committee (Tentative)</h2>
+			<h2 style="color:#0000FF">Organizing Committee</h2>
 				<h3>Honorable Chairs</h3>
 				<ul>
 					<li><b>Ching-Yu Yang</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
@@ -65,7 +65,7 @@ title: ICEA 2023
 		</div>
 		
 		<div style="padding-top: 10px">
-			<h2 style="color:#0000FF">Technical Program Committee (Tentative)</h2>
+			<h2 style="color:#0000FF">Technical Program Committee</h2>
 			<ul>
 				<li><b>Ameer Hamza Khan</b>, Hong Kong Polytechnic University, Hong Kong</li>
 				<li><b>Ashok Kumar Das</b>, International Institute of Information Technology, India</li>
