--- a/committee/index.html
+++ b/committee/index.html
@@ -21,7 +21,7 @@ title: ICEA 2023
 
 				<h3>General Chair</h3>
 				<ul>
-					<li><b>Jimmy Ming-Tai Wu</b>, Shandong University of Science and Technology, China</li>
+					<li><b>Jimmy Ming-Tai Wu</b>, National Kaohsiung University of Science and Technology, Taiwan</li>
 				</ul>
 
 				<h3>General Co-Chair</h3>
