--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -5,44 +5,33 @@ title: ICEA 2023
 <div class="container">
      <div class="content">
           <div>
-               <h2 style="color:#0000FF">Keynote Speech Information</h2>
+               <h2 style="color:#FFC9C9">Keynote Speech Information</h2>
                <center>
                <table class="tlayout2" cellspacing="0">
                     <tbody style="text-align: center">
                          <tr>
-                              <td class="theader" width="40%" colspan="2">
-                                   <b>Type</b>
+                              <td class="theader" width="33%" colspan="2">
+                                   <b>Jerry Chun-Wei Lin</b>
                               </td>
-                              <td class="theader" width="25%">
-                                   <b>Fee</b>
+                              <td class="theader" width="33%">
+                                   <b>Dong Seog HAN</b>
                               </td>
-                              <td class="theader" width="35%">
-                                   <b>Comment</b>
-                              </td>
-                         </tr>
-                         <tr>
-                              <td class="tcontent3" rowspan="2">
-                                   <a>Paper<br>Author</a>
-                              </td>
-                              <td class="tcontent1" width="40%">
-                                   <a>ACM/ACM SigAPP Member</a>
-                              </td>
-                              
-                              <td class="tcontent1">
-                                   <a>$600<br><!--(670,000 KRW)--!></a> 
-                              </td>
-                              <td class="tcontent3" rowspan="2">
-                                   <a>Free gifts, Reception Coupon, Banquet Coupon</a>
+                              <td class="theader" width="34%">
+                                   <b>Naveen Chilamkurti</b>
                               </td>
                          </tr>
                          <tr>
-                              <td class="tcontent2" width="40%">
-                                   <a>Non-Member</a>
+                              <td class="tcontent1" rowspan="2">
+                                   <a>1</a>
                               </td>
-                              <td class="tcontent2">
-                                   <a>$650</a>
+                              <td class="tcontent2" rowspan="2">
+                                   <a>2</a>
                               </td>
-                         </tr>         
+
+                              <td class="tcontent3" rowspan="2">
+                                   <a>2</a>
+                              </td>
+                         </tr>                         
                     </tbody>
                </table><br>
                </center>
