--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -5,10 +5,10 @@ title: ICEA 2023
 <div class="container">
      <div class="content">
           <div>
-               <h2 style="color:#FFC9C9">Keynote Speech Information</h2>
+               <h2 style="color:#0000FF">Keynote Speech Information</h2>
                <center>
                <table class="tlayout2" cellspacing="0">
-                    <tbody style="text-align: center">
+                    <tbody style="text-align: center" style="color:#FFC9C9">
                          <tr>
                               <td class="theader" width="33%" colspan="2">
                                    <b>Jerry Chun-Wei Lin</b>
