--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -10,7 +10,7 @@ title: ICEA 2023
                <table class="tlayout2" cellspacing="0">
                     <tbody style="text-align: center" style="color:#FFC9C9">
                          <tr>
-                              <td class="theader" width="33%" colspan="2">
+                              <td class="theader" width="33%">
                                    <b>Jerry Chun-Wei Lin</b>
                               </td>
                               <td class="theader" width="33%">
