--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -22,7 +22,7 @@ title: ICEA 2023
                          </tr>
                          <tr>
                               <td class="tcontent3" rowspan="2">
-                                   <a>1</a>
+                              <img src="https://icea-conf.github.io/2023/image/Jerry.jpg" alt="" style="max-width: 100%; height: auto;">    
                               </td>
                               
                               <td class="tcontent3" rowspan="2">
