--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -26,11 +26,11 @@ title: ICEA 2023
                               </td>
                               
                               <td class="tcontent3" rowspan="2">
-                                   <a>2</a>
+                              <img src="https://icea-conf.github.io/2023/image/Han.jpg" alt="" style="max-width: 100%; height: auto;">    
                               </td>
 
                               <td class="tcontent3" rowspan="2">
-                                   <a>2</a>
+                              <img src="https://icea-conf.github.io/2023/image/NChilamkurti.jpg" alt="" style="max-width: 100%; height: auto;">    
                               </td>
                          </tr>                         
                     </tbody>
