--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -8,7 +8,7 @@ title: ICEA 2023
                <h2 style="color:#0000FF">Keynote Speech Information</h2>
                <center>
                <table class="tlayout2" cellspacing="0">
-                    <tbody style="text-align: center" style="color:#FFC9C9">
+                    <tbody style="text-align: center; color:#FFC9C9">
                          <tr>
                               <td class="theader" width="33%">
                                    <b>Jerry Chun-Wei Lin</b>
