--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -11,7 +11,7 @@ title: ICEA 2023
                     <tbody style="text-align: center; color:#FFC9C9">
                          <tr>
                               <td class="theader" width="33%">
-                                   <b>Jerry Chun-Wei Lin</b>
+                                   <b><a href=lin.htm>Jerry Chun-Wei Lin</a></b>
                               </td>
                               <td class="theader" width="33%">
                                    <b>Dong Seog HAN</b>
