--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -8,9 +8,9 @@ title: ICEA 2023
                <h2 style="color:#0000FF">Keynote Speech Information</h2>
                <center>
                <table class="tlayout2" cellspacing="0">
-                    <tbody style="text-align: center; background-color:#FFC9C9">
+                    <tbody style="text-align: center">
                          <tr>
-                              <td class="theader" width="33%">
+                              <td class="theader" width="33%" style="background-color:#FFC9C9">
                                    <b><a href=https://icea-conf.github.io/2023/keynote/lin.htm>Jerry Chun-Wei Lin</a></b>
                               </td>
                               <td class="theader" width="33%">
