--- a/keynote/lin.htm
+++ b/keynote/lin.htm
@@ -4,13 +4,13 @@
                <h2 style="color:#0000FF">Keynote Speech Information-Jerry Chun-Wei Lin</h2>
           </div>
           <div>
-               <b>Biography: T.B.A.<b>
+               <b>Biography: T.B.A.<\b>
           </div>
           <div>
-               <b>Title: T.B.A.<b>
+               <b>Title: T.B.A.<\b>
           </div>  
           <div>
-               <b>Abstract: T.B.A.<b>
+               <b>Abstract: T.B.A.<\b>
           </div>             
       </div>
 </div>  
