--- a/keynote/lin.htm
+++ b/keynote/lin.htm
@@ -4,13 +4,13 @@
                <h2 style="color:#0000FF">Keynote Speech Information-Jerry Chun-Wei Lin</h2>
           </div>
           <div>
-               <b>Biography: T.B.A.<\b>
+               <b>Biography: Jerry Chun-Wei Lin received his Ph.D. at Department of Computer Science and Information Engineering of National Cheng Kung University in 2010. He serves as a full professor at the Department of Computer Science, Electrical Engineering and Mathematical Sciences of Western Norway University of Applied Sciences in Norway. He published many research articles in refereed journals and international conferences, 15 edited books, and he owns 33 patents (held and filed, 3 US patents). His research interests include data mining, soft computing, artificial intelligence/machine learning, and privacy preserving and security technologies. He is the editor-in-chief of the International Journal of Data Science and Pattern Recognition, the Associate Editor for several journals like IEEE TNNLS, IEEE, TDSC, IEEE TCYB, IEEE JBHI, and others. He was as the most cited Chinese Researcher respectively in 2018, 2019, and 2020 by Scopus/Elsevier. He is the Fellow of IET (FIET), senior member for both IEEE and ACM distinguished scientist.</b>
           </div>
           <div>
-               <b>Title: T.B.A.<\b>
+               <b>Title: T.B.A.</b>
           </div>  
           <div>
-               <b>Abstract: T.B.A.<\b>
+               <b>Abstract: T.B.A.</b>
           </div>             
       </div>
 </div>  
