--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -13,10 +13,10 @@ title: ICEA 2023
                               <td class="theader" width="33%" style="background-color:#FFC9C9">
                                    <b><a href=https://icea-conf.github.io/2023/keynote/lin.htm>Jerry Chun-Wei Lin</a></b>
                               </td>
-                              <td class="theader" width="33%">
+                              <td class="theader" width="33%" style="background-color:#FFC9C9">
                                    <b>Dong Seog HAN</b>
                               </td>
-                              <td class="theader" width="34%">
+                              <td class="theader" width="34%" style="background-color:#FFC9C9">
                                    <b>Naveen Chilamkurti</b>
                               </td>
                          </tr>
