--- a/keynote/index.htm
+++ b/keynote/index.htm
@@ -14,10 +14,10 @@ title: ICEA 2023
                                    <b><a href=https://icea-conf.github.io/2023/keynote/lin.htm>Jerry Chun-Wei Lin</a></b>
                               </td>
                               <td class="theader" width="33%" style="background-color:#FFC9C9">
-                                   <b>Dong Seog HAN</b>
+                                   <b><a href=https://icea-conf.github.io/2023/keynote/han.htm>Dong Seog HAN</a></b>
                               </td>
                               <td class="theader" width="34%" style="background-color:#FFC9C9">
-                                   <b>Naveen Chilamkurti</b>
+                                   <b><a href=https://icea-conf.github.io/2023/keynote/Chilamkurti.htm>Naveen Chilamkurti</a></b>
                               </td>
                          </tr>
                          <tr>
