--- a/keynote/han.htm
+++ b/keynote/han.htm
@@ -7,9 +7,11 @@ title: ICEA 2023
           <div>
                <h2 style="color:#0000FF">Keynote Speech Information-Dong Seog HAN</h2><br>
                <img src="https://icea-conf.github.io/2023/image/han.jpg" alt="" style="max-width: 20%; height: auto;"><br>
-               Dean, College of IT Engineering, Kyungpook National University (KNU), South Korea <br>
-               Professor, School of Electronic and Electrical Engineering, KNU, South Korea<br>
-               Director, Center for ICT and Automotive Convergence<br>
+               <ul>
+               <li> Dean, College of IT Engineering, Kyungpook National University (KNU), South Korea </li>
+               <li> Professor, School of Electronic and Electrical Engineering, KNU, South Korea</li>
+               <li> Director, Center for ICT and Automotive Convergence</li>
+               </ul>     
           </div>
           <div>
                <b>Biography</b>: DONG SEOG HAN (Senior Member, IEEE) received his B.S. degree in electronic engineering from Kyungpook National University (KNU), Daegu, South Korea, in 1987 and M.S. and Ph.D. degrees in electrical engineering from the Korea Advanced Institute of Science and Technology (KAIST), Daejeon, South Korea, in 1989 and 1993, respectively. From 1987 to 1996, he was with Samsung Electronics Co., Ltd., where he developed the transmission system for the ATSC HDTV receiver. Since 1996, he has been a Professor at the School of Electronic and Electrical Engineering, KNU. He was a Courtesy Associate Professor at the Department of Electrical and Computer Engineering, University of Florida, in 2004. He was a Director at the Center of Digital TV and Broadcasting, Institute for Information Technology Advancement (IITA), from 2006 to 2008. He is currently the Director of the Center for ICT and Automotive Convergence, KNU. He is also the Dean of the College of IT Engineering, KNU. His main research interests include intelligent signal processing and autonomous vehicles.
