--- a/keynote/han.htm
+++ b/keynote/han.htm
@@ -18,11 +18,11 @@ title: ICEA 2023
           <br><br>
           </div>
           <div>
-               <b>Title: AI Technologies for Autonomous Driving</b>
+               <b>Title:</b> AI Technologies for Autonomous Driving
                <br><br>
           </div>  
           <div>
-               <b>Abstract: Artificial intelligence technologies for autonomous driving refer to the core technologies that enable vehicles to drive autonomously, perceive their surroundings, and reach their destinations safely and efficiently. Artificial intelligence technologies for autonomous driving involve the convergence of various research and technologies from fields such as machine learning, computer vision, sensor technology, and natural language processing. In this talk, we will cover the following main AI component technologies for autonomous driving:<br>
+               <b>Abstract:</b> Artificial intelligence technologies for autonomous driving refer to the core technologies that enable vehicles to drive autonomously, perceive their surroundings, and reach their destinations safely and efficiently. Artificial intelligence technologies for autonomous driving involve the convergence of various research and technologies from fields such as machine learning, computer vision, sensor technology, and natural language processing. In this talk, we will cover the following main AI component technologies for autonomous driving:<br>
 <ol>
     <li> Driving Environment Awareness Technology: Autonomous vehicles use a variety of sensors to detect their surroundings. It utilizes LiDAR, radar, cameras, and ultrasonic sensors to determine the driving route and recognize surrounding conditions in real-time. It covers the detection of surrounding vehicles, obstacles, and roads, as well as predicting the movement of pedestrians.</li>
 
@@ -30,7 +30,7 @@ title: ICEA 2023
 
     <li> Path Planning and SLAM (Simultaneous Localization and Mapping): Autonomous driving path planning involves determining the optimal driving path from the starting point to the destination, considering environmental information and the vehicle's status. SLAM is crucial for path planning, as it enables the vehicle or robot to simultaneously detect the surroundings, estimate its position, and construct a map of the environment. </li>
 </ol>
-Through this talk, you will be able to quickly learn the development trends and element technologies of artificial intelligence algorithms and autonomous driving systems.</b>
+Through this talk, you will be able to quickly learn the development trends and element technologies of artificial intelligence algorithms and autonomous driving systems.
           </div>             
       </div>
 </div>  
