--- a/keynote/han.htm
+++ b/keynote/han.htm
@@ -6,7 +6,7 @@ title: ICEA 2023
      <div class="content">
           <div>
                <h2 style="color:#0000FF">Keynote Speech Information-Dong Seog HAN</h2><br>
-               <img src="https://icea-conf.github.io/2023/image/han.jpg" alt="" style="max-width: 20%; height: auto;"><br>
+               <img src="https://icea-conf.github.io/2023/image/Han.jpg" alt="" style="max-width: 20%; height: auto;"><br>
                <ol>
                     <li> Dean, College of IT Engineering, Kyungpook National University (KNU), South Korea </li>
                     <li> Professor, School of Electronic and Electrical Engineering, KNU, South Korea</li>
